[gd_scene load_steps=34 format=3 uid="uid://ddna4qf2gbx2w"]

[ext_resource type="Script" path="res://Cards/SpecialCard.gd" id="1_502hs"]
[ext_resource type="Texture2D" uid="uid://dqx77i4k4ns2k" path="res://Assets/Effects/Magic_Explosion/Explosion_1.png" id="2_mxllp"]
[ext_resource type="Texture2D" uid="uid://df1tnomm4328s" path="res://Assets/Effects/Magic_Explosion/Explosion_2.png" id="3_0iqku"]
[ext_resource type="Texture2D" uid="uid://dyww7i73qbft0" path="res://Assets/Effects/Magic_Explosion/Explosion_3.png" id="4_rso50"]
[ext_resource type="Texture2D" uid="uid://bjasowt8aml5o" path="res://Assets/Effects/Magic_Explosion/Explosion_4.png" id="5_l8tqo"]
[ext_resource type="Texture2D" uid="uid://dab0744diingd" path="res://Assets/Effects/Magic_Explosion/Explosion_5.png" id="6_hl81f"]
[ext_resource type="Texture2D" uid="uid://v8rwigo6pgbw" path="res://Assets/Effects/Magic_Explosion/Explosion_6.png" id="7_u16aq"]
[ext_resource type="Texture2D" uid="uid://df0jt437brbcu" path="res://Assets/Effects/Magic_Explosion/Explosion_7.png" id="8_nxmx6"]
[ext_resource type="Texture2D" uid="uid://cak81watju8xr" path="res://Assets/Effects/Magic_Explosion/Explosion_8.png" id="9_iqyyv"]
[ext_resource type="Texture2D" uid="uid://c7xlmayldmhax" path="res://Assets/Effects/Magic_Explosion/Explosion_9.png" id="10_k1kje"]
[ext_resource type="Texture2D" uid="uid://jkiepjsxilhq" path="res://Assets/Effects/Magic_Explosion/Explosion_10.png" id="11_usiif"]
[ext_resource type="PackedScene" uid="uid://dvwxp6msal8o6" path="res://enemy_detector.tscn" id="12_giv3f"]
[ext_resource type="Texture2D" uid="uid://dfuvb4jb8scmn" path="res://Assets/Effects/Explosion_1/e1.png" id="12_w6x0m"]
[ext_resource type="Texture2D" uid="uid://dhluxs5dn1xla" path="res://Assets/Effects/Explosion_1/e2.png" id="13_l62qq"]
[ext_resource type="Texture2D" uid="uid://de8vau4cdnqwu" path="res://Assets/Effects/Explosion_1/e3.png" id="14_37mdc"]
[ext_resource type="Texture2D" uid="uid://b46oxjbgv6br3" path="res://Assets/Effects/Explosion_1/e4.png" id="15_ceokp"]
[ext_resource type="Texture2D" uid="uid://cbdaculd0te33" path="res://Assets/Effects/Explosion_1/e5.png" id="16_quyep"]
[ext_resource type="Texture2D" uid="uid://bnqpjt2cqpsjk" path="res://Assets/Effects/Explosion_1/e6.png" id="17_5pxwg"]
[ext_resource type="Texture2D" uid="uid://bp6e74dyg4r0j" path="res://Assets/Effects/Explosion_1/e7.png" id="18_txuxg"]
[ext_resource type="Texture2D" uid="uid://c5dix547ivx4b" path="res://Assets/Effects/Glue/2.png" id="22_748fh"]
[ext_resource type="Texture2D" uid="uid://cvbjay5he8ma3" path="res://Assets/Effects/Glue/3.png" id="23_ldlay"]
[ext_resource type="Texture2D" uid="uid://dn5fpull00752" path="res://Assets/Effects/Glue/4.png" id="24_nrfb1"]
[ext_resource type="Texture2D" uid="uid://be5y15uql2qg6" path="res://Assets/Effects/Poison_Explosion/Explosion_1.png" id="25_54v6a"]
[ext_resource type="Texture2D" uid="uid://gp2anjwgcvfk" path="res://Assets/Effects/Poison_Explosion/Explosion_2.png" id="26_e2vdu"]
[ext_resource type="Texture2D" uid="uid://4w3gtsq0st1f" path="res://Assets/Effects/Poison_Explosion/Explosion_3.png" id="27_6ortv"]
[ext_resource type="Texture2D" uid="uid://bfipqkvonu611" path="res://Assets/Effects/Poison_Explosion/Explosion_4.png" id="28_tjr0j"]
[ext_resource type="Texture2D" uid="uid://deog6wekg81ld" path="res://Assets/Effects/Poison_Explosion/Explosion_5.png" id="29_lf1an"]
[ext_resource type="Texture2D" uid="uid://bwala0pvv7f12" path="res://Assets/Effects/Poison_Explosion/Explosion_6.png" id="30_si3ny"]
[ext_resource type="Texture2D" uid="uid://bsvj10cn37351" path="res://Assets/Effects/Poison_Explosion/Explosion_7.png" id="31_28nmu"]
[ext_resource type="Texture2D" uid="uid://d0tej87w475a4" path="res://Assets/Effects/Poison_Explosion/Explosion_8.png" id="32_yjjpq"]
[ext_resource type="Texture2D" uid="uid://c220ehk8jffhu" path="res://Assets/Effects/Poison_Explosion/Explosion_9.png" id="33_b16ta"]
[ext_resource type="Texture2D" uid="uid://5st8lutbjqsw" path="res://Assets/Effects/Poison_Explosion/Explosion_10.png" id="34_tvcuf"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qa1dp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_mxllp")
}, {
"duration": 1.0,
"texture": ExtResource("3_0iqku")
}, {
"duration": 1.0,
"texture": ExtResource("4_rso50")
}, {
"duration": 1.0,
"texture": ExtResource("5_l8tqo")
}, {
"duration": 1.0,
"texture": ExtResource("6_hl81f")
}, {
"duration": 1.0,
"texture": ExtResource("7_u16aq")
}, {
"duration": 1.0,
"texture": ExtResource("8_nxmx6")
}, {
"duration": 1.0,
"texture": ExtResource("9_iqyyv")
}, {
"duration": 1.0,
"texture": ExtResource("10_k1kje")
}, {
"duration": 1.0,
"texture": ExtResource("11_usiif")
}],
"loop": false,
"name": &"CRYOBALL",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_w6x0m")
}, {
"duration": 1.0,
"texture": ExtResource("13_l62qq")
}, {
"duration": 1.0,
"texture": ExtResource("14_37mdc")
}, {
"duration": 1.0,
"texture": ExtResource("15_ceokp")
}, {
"duration": 1.0,
"texture": ExtResource("16_quyep")
}, {
"duration": 1.0,
"texture": ExtResource("17_5pxwg")
}, {
"duration": 1.0,
"texture": ExtResource("18_txuxg")
}],
"loop": false,
"name": &"FIREBALL",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_748fh")
}, {
"duration": 1.0,
"texture": ExtResource("23_ldlay")
}, {
"duration": 1.0,
"texture": ExtResource("24_nrfb1")
}],
"loop": true,
"name": &"GLUE",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_54v6a")
}, {
"duration": 1.0,
"texture": ExtResource("26_e2vdu")
}, {
"duration": 1.0,
"texture": ExtResource("27_6ortv")
}, {
"duration": 1.0,
"texture": ExtResource("28_tjr0j")
}, {
"duration": 1.0,
"texture": ExtResource("29_lf1an")
}, {
"duration": 1.0,
"texture": ExtResource("30_si3ny")
}, {
"duration": 1.0,
"texture": ExtResource("31_28nmu")
}, {
"duration": 1.0,
"texture": ExtResource("32_yjjpq")
}, {
"duration": 1.0,
"texture": ExtResource("33_b16ta")
}, {
"duration": 1.0,
"texture": ExtResource("34_tvcuf")
}],
"loop": false,
"name": &"POISON",
"speed": 10.0
}]

[node name="SpecialCard" type="Node2D"]
script = ExtResource("1_502hs")

[node name="Preview" type="Sprite2D" parent="."]
visible = false

[node name="Effect" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_qa1dp")
animation = &"FIREBALL"

[node name="EnemyDetector" parent="Effect" instance=ExtResource("12_giv3f")]
scale = Vector2(6.31, 6.31)

[node name="EffectSound" type="AudioStreamPlayer2D" parent="."]

[connection signal="animation_finished" from="Effect" to="." method="_on_effect_animation_finished"]
[connection signal="enemyEntered" from="Effect/EnemyDetector" to="." method="_on_enemy_detector_enemy_entered"]
[connection signal="enemyLeft" from="Effect/EnemyDetector" to="." method="_on_enemy_detector_enemy_left"]
[connection signal="enemyLeft" from="Effect/EnemyDetector" to="Effect/EnemyDetector" method="_on_enemy_left"]
